@@ -1,5 +1,7 @@
 Version 0.1.6
 - Coin flip game. Bet a few points of your choosing to double them or lose them!
+- New item: Clicker Buddy Multiplication - 1500 Points - Clicker Buddies can use your Click Multiplier!
+- Backend changes 
 
 Version 0.1.5
 - New Skin: Idiot! - 325 Points -YOU ARE AN IDIOT! HAHAHAHAHAHAHAHAHAHAHAHAHA! (note: this skin flashes when clicked, may cause eye strain when clicked too fast.)
